wso2/archived/gateway-secret-cert.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gitlab-gateway
  namespace: gitlab
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - pipr-uat-gitlab.dol.go.th
    port:
      name: ssh-gitlab
      number: 22
      protocol: TCP
  - hosts:
    - pipr-uat-gitlab.dol.go.th
    - pipr-uat-minio.dol.go.th
    port:
      name: http-gitlab
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: false
  - hosts:
    - pipr-uat-gitlab.dol.go.th
    - pipr-uat-minio.dol.go.th
    port:
      name: https-gitlab
      number: 443
      protocol: HTTPS
    tls:
      credentialName: custom-ca
      mode: SIMPLE
